<resources>
    <string name="app_name">My Sample Android App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="start_worker_activity">Start Worker Activity</string>
    <string name="start_worker">Start Worker</string>
    <string name="cancel_worker">Cancel Worker</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="explicit_intent_activity">Explicit Intent</string>
    <string name="user_icon">User Icon</string>
    <string name="week6">Week 6</string>
    <string name="week7">Week 7</string>
    <string name="logo">Logo</string>
    <string name="custom_view">Custom View</string>
    <string name="type_text_here">Type Text Here</string>
    <string name="send_broadcast">Broadcast</string>
    <string name="message">Message</string>
    <string name="broadcast">Broadcast</string>
    <string name="week8">Week 8</string>
    <string name="recycler_view">Recycler View</string>
    <string name="week9">Week 9</string>
    <string name="animation">Animation</string>
    <string name="animate_bitmaps">Animate Bitmaps</string>
    <string name="remember_me">Remember Me</string>
    <string name="email">Email</string>
    <string name="name_invalid">Invalid Name</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="logout">Logout</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="ask_question">Ask Question</string>
    <string name="dialog_title">Question</string>
    <string name="question">Are you the student of EVS?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_permission">Ask Permission</string>

    <string name="permission_rationale">Please allow permission to the app. Denying, will
        cause application to no longer function as intended. You can allow permission by
        Go To Settings > Permissions > Enable Permission Switch</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="str_retry">Retry</string>
    <string name="dismiss">Dismiss</string>
    <string name="permission">Permission</string>
    <string name="drawer_activity">Drawer Activity</string>
    <string name="week10">Week 10</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="more">More</string>
    <string name="cover">Cover</string>
    <string name="fragment_not_exists_in_backstack">Fragment not exists in backstack</string>
    <string name="exit">Exit</string>
    <string name="dialog_exit_message">Do you really want to exit the activity?</string>
    <string name="cart">Cart</string>
    <string name="flag">Flag</string>
    <string name="actionbar">Actionbar</string>
    <string name="viewpager">ViewPager</string>
    <string name="sqlite">Sqlite</string>
    <string name="week11">Week 11</string>
    <string name="phone">Phone</string>
    <string name="add">Add</string>
    <string name="get">Get</string>
    <string name="clearDb">Clear Db</string>
    <string name="test">Test</string>
    <string name="week12">Week 12</string>
    <string name="google_signin">Google SignIn</string>
    <string name="auth">Authentication (Google Sign-in)</string>
    <string name="signout">Signout</string>
    <string name="mediaPlayer">Media Player</string>
    <string name="network">Network</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="image_pick">Image Pick</string>
    <string name="image_pick_via_camera">Pick Image via Camera/Gallery</string>
    <string name="request">Request</string>
    <string name="rest_api">Rest API</string>
    <string name="location_api">Location API</string>
    <string name="get_location">Get Location</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="week13">Week 13</string>
    <string name="default_channel" translatable="false">GeneralChannel</string>
    <string name="google_maps_key">AIzaSyB27yspqFzZlJCWyduh3lGFY2COSk7CAjM</string>
    <string name="title">Title</string>
    <string name="short_content">Short Content</string>
    <string name="long_content">Long Content</string>
    <string name="generate">Generate</string>
    <string name="id">ID</string>
    <string name="notification">Notification</string>
    <string name="no_location_detected">No location detected</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="permission_denied_explanation">Permission denied, permission is mandatory for application\'s functionality</string>
    <string name="save">Save</string>
    <string name="realtime_database">Realtime Database</string>
    <string name="week14">Week 14</string>
    <string name="google_maps">Google Maps</string>
    <string name="log_event">Log Event</string>
    <string name="week15">Week 15</string>
</resources>
