<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".week12.Week12Activity"
    android:padding="10dp"
    android:gravity="center">

    <EditText
        android:id="@+id/etNotifId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id" />

    <EditText
        android:id="@+id/etNotifTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/etNotifShortContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/short_content" />

    <EditText
        android:id="@+id/etNotifLongContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/long_content" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate" />

</LinearLayout>