<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".week12.Week12Activity"
    android:padding="10dp"
    android:gravity="center">

    <Button
        android:id="@+id/btnAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth" />

    <Button
        android:id="@+id/btnMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mediaPlayer" />

    <Button
        android:id="@+id/btnNetwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network" />

    <Button
        android:id="@+id/btnImagePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_pick_via_camera" />
</LinearLayout>