<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".week9.Week9Activity"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/btnAnimateBitmaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animate_bitmaps" />

    <Button
        android:id="@+id/btnPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission" />

    <Button
        android:id="@+id/btnSharedPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shared_preferences" />

    <Button
        android:id="@+id/btnAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog" />
</LinearLayout>